bug fix: when font-size is too big, border can not display correctlly

--- a/app/static/components/attachment-items.less
+++ b/app/static/components/attachment-items.less
@@ -46,7 +46,7 @@
     border-radius: 2px;
     color: @text-color;
     height: 74px;
-    overflow: hidden;
+    overflow: visible;
     &:hover {
       .attachment-action-bar {
         opacity: 1;
